WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
119298
JSOESTextureHalfFloat not generated on Windows
https://bugs.webkit.org/show_bug.cgi?id=119298
Summary
JSOESTextureHalfFloat not generated on Windows
Alex Christensen
Reported
2013-07-30 18:14:03 PDT
I have spent weeks wondering why OESTextureHalfFloat wasn't working on Windows. JSOESTextureHalfFloat.h and JSOESTextureHalfFloat.cpp were not being generated. After going through every possible difference between OESTextureHalfFloat and OESTextureFloat I found the problem: OESTextureHalfFloat.idl doesn't end with a newline, which was making generate-bindings.pl fail, but only on Windows.
Attachments
Patch
(6.65 KB, patch)
2013-07-30 18:19 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2013-07-30 18:19:00 PDT
Created
attachment 207793
[details]
Patch
Chris Dumez
Comment 2
2013-07-30 22:24:41 PDT
Comment on
attachment 207793
[details]
Patch r=me.
WebKit Commit Bot
Comment 3
2013-08-01 09:52:38 PDT
Comment on
attachment 207793
[details]
Patch Clearing flags on attachment: 207793 Committed
r153588
: <
http://trac.webkit.org/changeset/153588
>
WebKit Commit Bot
Comment 4
2013-08-01 09:52:40 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug