Made OESTextureHalfFloat work on Windows. https://bugs.webkit.org/show_bug.cgi?id=119298

Reviewed by Christophe Dumez.

* DerivedSources.cpp: Added JSOESTextureHalfFloat.cpp inside of #if ENABLE(WEBGL).
* WebCore.vcxproj/WebCore.vcxproj:
* WebCore.vcxproj/WebCore.vcxproj.filters:
Added JSOESTextureHalfFloat.cpp and JSOESTextureHalfFloat.h.
* html/canvas/OESTextureHalfFloat.idl: Added newline to end of file.
* html/canvas/WebGLObject.cpp: Removed unused #includes.


Canonical link: https://commits.webkit.org/137342@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153588 268f45cc-cd09-0410-ab3c-d52691b4dbfc