Source/WebCore/html/canvas/WebGLObject.cpp
@@ -30,9 +30,6 @@
 #include "WebGLObject.h"
 
 #include "EXTTextureFilterAnisotropic.h"
-#include "OESStandardDerivatives.h"
-#include "OESTextureFloat.h"
-#include "OESVertexArrayObject.h"
 #include "WebGLCompressedTextureS3TC.h"
 #include "WebGLContextGroup.h"
 #include "WebGLDebugRendererInfo.h"
